p0/nginx-deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-asset
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-asset
  template:
    metadata:
      labels:
        app: nginx-asset
        role: backend
    spec:
      containers:
      - name: nginx-asset
        image: starfish0r/nginx-p0
        ports:
        - containerPort: 8080
