p0/nginx-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-asset
  labels:
    app: nginx-asset
spec:
  containers:
  - name: nginx
    image: starfish0r/nginx-p0
