p0/www-asset.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: www-asset
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: nginx-asset
