p0/asset-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-asset
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-asset
  template:
    metadata:
      labels:
        app: nginx-asset
        role: backend
    spec:
      containers:
      - name: nginx-asset
        image: starfish0r/nginx-p0
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: www-asset
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: nginx-asset

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: ingress
spec:
  rules:
  - host: 3.g.ch.innoq.io
    http:
      paths:
      - path: /
        backend:
          serviceName: www-asset
          servicePort: 80
